--- a/index.qmd
+++ b/index.qmd
@@ -69,6 +69,22 @@ this_heat_wave_summary %>% kableExtra::kbl()
 
 ```
 
+##### 3-day periods
+
+```{r}
+
+this_heat_wave_summary = heat_wave_summary %>% filter(threshold == 85, days == 3, year(date)==year(today())) 
+
+if(nrow(this_heat_wave_summary)>0){
+this_heat_wave_summary %>% kableExtra::kbl() 
+} else{
+  cat("No heat waves yet at this threshold.")
+}
+
+
+```
+
+
 ##### 5-day periods
 
 ```{r}
@@ -102,6 +118,23 @@ this_heat_wave_summary %>% kableExtra::kbl()
 
 
 ```
+
+
+##### 3-day periods
+
+```{r}
+
+this_heat_wave_summary = heat_wave_summary %>% filter(threshold == 90, days == 3, year(date)==year(today())) 
+
+if(nrow(this_heat_wave_summary)>0){
+this_heat_wave_summary %>% kableExtra::kbl() 
+} else{
+  cat("No heat waves yet at this threshold.")
+}
+
+
+```
+
 
 ##### 5-day periods
 
@@ -138,6 +171,23 @@ this_heat_wave_summary %>% kableExtra::kbl()
 
 ```
 
+
+##### 3-day periods
+
+```{r}
+
+this_heat_wave_summary = heat_wave_summary %>% filter(threshold == 95, days == 3, year(date)==year(today())) 
+
+if(nrow(this_heat_wave_summary)>0){
+this_heat_wave_summary %>% kableExtra::kbl() 
+} else{
+  cat("No heat waves yet at this threshold.")
+}
+
+
+```
+
+
 ##### 5-day periods
 
 ```{r}
@@ -162,6 +212,22 @@ Summary of heat waves this year, based on two and five consecutive days at 99th 
 ```{r}
 
 this_heat_wave_summary = heat_wave_summary %>% filter(threshold == 99, days == 2, year(date)==year(today()))
+
+if(nrow(this_heat_wave_summary)>0){
+this_heat_wave_summary %>% kableExtra::kbl() 
+} else{
+  cat("No heat waves yet at this threshold.")
+}
+
+```
+
+
+
+##### 3-day periods
+
+```{r}
+
+this_heat_wave_summary = heat_wave_summary %>% filter(threshold == 99, days == 3, year(date)==year(today()))
 
 if(nrow(this_heat_wave_summary)>0){
 this_heat_wave_summary %>% kableExtra::kbl() 
@@ -204,6 +270,13 @@ Hi_min_thresholds_table %>% kableExtra::kbl()
 ![Recent Time Series](plots/recent_timeseries_Barcelona.png)
 
 
+### Threshold for at least 3 days
+
+![Full Time Series](plots/full_timeseries_3d_Barcelona.png)
+
+![Recent Time Series](plots/recent_timeseries_3d_Barcelona.png)
+
+
 ### Threshold for at least 5 days
 
 ![Full Time Series](plots/full_timeseries_5d_Barcelona.png)
@@ -220,6 +293,14 @@ Hi_min_thresholds_table %>% kableExtra::kbl()
 ![Recent Time Series](plots/recent_timeseries_Madrid.png)
 
 
+### Threshold for at least 3 days
+
+
+![Full Time Series](plots/full_timeseries_3d_Madrid.png)
+
+
+![Recent Time Series](plots/recent_timeseries_3d_Madrid.png)
+
 ### Threshold for at least 5 days
 
 
@@ -235,6 +316,18 @@ Hi_min_thresholds_table %>% kableExtra::kbl()
 ![Full Time Series](plots/full_timeseries_València.png)
 
 ![Recent Time Series](plots/recent_timeseries_València.png)
+
+
+### Threshold for at least 3 days
+
+
+![Full Time Series](plots/full_timeseries_3d_València.png)
+
+
+
+![Recent Time Series](plots/recent_timeseries_3d_València.png)
+
+
 
 ### Threshold for at least 5 days
 
@@ -254,6 +347,16 @@ Hi_min_thresholds_table %>% kableExtra::kbl()
 ![Full Time Series](plots/full_timeseries_Sevilla.png)
 ![Recent Time Series](plots/recent_timeseries_Sevilla.png)
 
+
+
+### Threshold for at least 3 days
+
+
+
+![Full Time Series](plots/full_timeseries_3d_Sevilla.png)
+![Recent Time Series](plots/recent_timeseries_3d_Sevilla.png)
+
+
 ### Threshold for at least 5 days
 
 
@@ -268,6 +371,15 @@ Hi_min_thresholds_table %>% kableExtra::kbl()
 ![Full Time Series](plots/full_timeseries_Zaragoza.png)
 
 ![Recent Time Series](plots/recent_timeseries_Zaragoza.png)
+
+
+### Threshold for at least 3 days
+
+
+![Full Time Series](plots/full_timeseries_3d_Zaragoza.png)
+
+![Recent Time Series](plots/recent_timeseries_3d_Zaragoza.png)
+
 
 ### Threshold for at least 5 days
 
